--- a/DiceGame/DiceGame.csproj
+++ b/DiceGame/DiceGame.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="ConsoleTables" Version="2.6.2" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
   </ItemGroup>
 
